# CppStazhTask

./: .gitignore  Readme.md
program_1/: CMakeLists.txt
program_1/src/core/: action.cpp  action.h  io.h  mapper.h
program_1/src/input_action/: result_mapper.cpp  result_mapper.h  validator.cpp  validator.h
program_1/src/util/: stdio.cpp  stdio.h  string_util.cpp  string_util.h
program_1/test/: CMakeLists.txt  assertion_exception.h  main.cpp
program_1/test/core/: test_action.cpp  test_action.h
program_1/test/input_action/: test_result_mapper.cpp  test_result_mapper.h  test_validator.cpp  test_validator.h
